[package]
name = "jittertime"
version = "0.1.0"
authors = ["Nathaniel Knight <nathaniel.ep@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.74"
rand = { version = "0.8.3", features = ["std", "std_rng"] }
getrandom = { version = "0.2.2", features = ["js"] }
chrono = { version = "0.4.19", default-features = false}


[dev-dependencies]
wasm-bindgen-cli = "=0.2.74"
